@@ -1,6 +1,11 @@
 			   XPCE ChangeLog
 			   ==============
 
+* COMPATIBILITY: Make PceEmacs Control-J work the same as GNU-Emacs.  Also
+  make prompters return immediately if the value is unique within the
+  value-set: M-x goto-l RET 42 RET now works.
+
+
 VERSION 6.0.1, distributed with SWI-Prolog 5.0.1
 ================================================
 
